# glorytun

./: .gitignore  .gitmodules  COMMAND-LINE.md  MULTIPATH-EXAMPLE.md  Makefile  Makefile.am  PERFORMANCE-BASE-SCHEDULING.md  PLAN-B-TODO.md  configure.ac  meson.build  meson_options.txt
.github/workflows/: build.yml  upload.yml
scripts/client/openrc/: README.md  glorytun-client  glorytun-client.conf
scripts/client/systemd/: README.md  glorytun-client  glorytun-client-start  glorytun-client-teardown  glorytun-client.service
scripts/server/openrc/: README.md  glorytun-server  glorytun-server.conf
scripts/server/systemd/: README.md  glorytun-server  glorytun-server-start  glorytun-server@.service
src/: path.c
